# potsim2

./: .travis.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  wheels.yml
potsim2/: PotGrid.py  __init__.py  vdw.py
potsim2/src/: potsimlib.cpp  skin.cpp
tests/: test.py  test_potgrid.py
tests/data/: A__02_01.grd  A__02_01.pkl  A__11_01.grd  A__11_01.pkl
