[build-system]
requires = ["pybind11>=2.2", "setuptools>=61.0.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "potsim2"
version = "0.3.6"
description = "Simple package to segment and compare protein potential grids"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Eloy Felix", email = "eloyfelix@gmail.com" }
]
urls = { "Homepage" = "https://github.com/chembl/potsim2" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = ["MDAnalysis>=2.3.0", "GridDataFormats>=1.0.1"]

[tool.setuptools]
packages = ["potsim2"]
